--- a/scripts/install
+++ b/scripts/install
@@ -24,6 +24,7 @@ domain=$YNH_APP_ARG_DOMAIN
 path_url=$YNH_APP_ARG_PATH
 admin=$YNH_APP_ARG_ADMIN
 is_public=$YNH_APP_ARG_IS_PUBLIC
+admin_pass=$(ynh_string_random 24)
 random_key=$(ynh_string_random 32)
 
 
@@ -72,15 +73,6 @@ ynh_app_setting_set $app random_key $random_key
 
 ynh_install_php7
 
-#=================================================
-# CREATE A MYSQL DATABASE
-#=================================================
-# If your app uses a MySQL database, you can use these lines to bootstrap
-# a database, an associated user and save the password in app settings
-
-db_name=$(ynh_sanitize_dbid $app)
-ynh_app_setting_set $app db_name $db_name
-ynh_mysql_setup_db $db_name $db_name
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
@@ -130,14 +122,11 @@ sudo  cp ../conf/.env $final_path/.env
 # MODIFY A CONFIG FILE
 #=================================================
 ynh_replace_string "random_key"  "$random_key" "$final_path/.env"
-ynh_replace_string "db_user"     "$db_name"    "$final_path/.env"
-ynh_replace_string "db_password" "$db_pwd"     "$final_path/.env"
-ynh_replace_string "db_name"     "$db_name"    "$final_path/.env"
 
 init_composer $final_path
-cd $final_path && sudo bin/console doctrine:schema:create
-cd $final_path && sudo -u "$app" bin/console cache:warmup --env=prod
-cd $final_path && sudo bin/console kimai:create-user "$admin" "$email" ROLE_SUPER_ADMIN
+cd $final_path && sudo /usr/bin/php7.2 bin/console doctrine:schema:create
+cd $final_path && sudo /usr/bin/php7.2 bin/console cache:warmup --env=prod
+cd $final_path && sudo /usr/bin/php7.2 bin/console kimai:create-user "$admin" "$email" ROLE_SUPER_ADMIN "$admin_pass"
 
 #=================================================
 # SETUP APPLICATION 
@@ -179,3 +168,15 @@ if [ "$(lsb_release --codename --short)" == "jessie" ]; then
 else
     update-alternatives --set php /usr/bin/php7.0
 fi
+
+#=================================================
+# SEND A README FOR THE ADMIN
+#=================================================
+
+message=" $app was successfully installed :)
+Please open https://$domain$path_url
+The admin username is: $email
+Here is the admin password: $admin_pass
+If you facing an issue or want to improve this app, please open a new issue in this project: https://github.com/YunoHost-Apps/kimai2_ynh"
+
+ynh_send_readme_to_admin "$message"
