--- a/scripts/install
+++ b/scripts/install
@@ -26,6 +26,7 @@ admin=$YNH_APP_ARG_ADMIN
 is_public=$YNH_APP_ARG_IS_PUBLIC
 admin_pass=$(ynh_string_random 24)
 random_key=$(ynh_string_random 32)
+registration="true"
 
 
 # This is a multi-instance app, meaning it can be installed several times independently
@@ -64,6 +65,7 @@ ynh_app_setting_set $app path $path_url
 ynh_app_setting_set $app admin $admin
 ynh_app_setting_set $app is_public $is_public
 ynh_app_setting_set $app random_key $random_key
+ynh_app_setting_set $app registration $registration
 
 #=================================================
 # STANDARD MODIFICATIONS
@@ -73,6 +75,22 @@ ynh_app_setting_set $app random_key $random_key
 
 ynh_install_php7
 
+#=================================================
+# CREATE A MYSQL DATABASE
+#=================================================
+
+### Use these lines if you need a database for the application.
+### `ynh_mysql_setup_db` will create a database, an associated user and a ramdom password.
+### The password will be stored as 'mysqlpwd' into the app settings,
+### and will be available as $db_pwd
+### If you're not using these lines:
+###		- Remove the section "BACKUP THE MYSQL DATABASE" in the backup script
+###		- Remove also the section "REMOVE THE MYSQL DATABASE" in the remove script
+###		- As well as the section "RESTORE THE MYSQL DATABASE" in the restore script
+
+db_name=$(ynh_sanitize_dbid $app)
+ynh_app_setting_set $app db_name $db_name
+ynh_mysql_setup_db $db_name $db_name
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
@@ -123,6 +141,10 @@ sudo  cp ../conf/.env $final_path/.env
 #=================================================
 ynh_replace_string "__RANDOM_KEY__"  "$random_key" "$final_path/.env"
 ynh_replace_string "__DOMAIN__"      "$domain"     "$final_path/.env"
+ynh_replace_string "__DB_PASSWORD__" "$db_pwd"     "$final_path/.env"
+ynh_replace_string "__DB_USER__"     "$db_name"    "$final_path/.env"
+ynh_replace_string "__DB_NAME__"     "$db_name"    "$final_path/.env"
+
 
 
 init_composer $final_path
