--- a/scripts/install
+++ b/scripts/install
@@ -26,8 +26,8 @@ admin=$YNH_APP_ARG_ADMIN
 is_public=$YNH_APP_ARG_IS_PUBLIC
 admin_pass=$(ynh_string_random 24)
 random_key=$(ynh_string_random 32)
-registration="true"
-
+registration=$(YNH_APP_ARG_REGISTRATION)
+database=$(YNH_APP_ARG_DATABASE)
 
 # This is a multi-instance app, meaning it can be installed several times independently
 # The id of the app as stated in the manifest is available as $YNH_APP_ID
@@ -66,6 +66,8 @@ ynh_app_setting_set $app admin $admin
 ynh_app_setting_set $app is_public $is_public
 ynh_app_setting_set $app random_key $random_key
 ynh_app_setting_set $app registration $registration
+ynh_app_setting_set $app database $database
+
 
 #=================================================
 # STANDARD MODIFICATIONS
@@ -74,23 +76,6 @@ ynh_app_setting_set $app registration $registration
 #=================================================
 
 ynh_install_php7
-
-#=================================================
-# CREATE A MYSQL DATABASE
-#=================================================
-
-### Use these lines if you need a database for the application.
-### `ynh_mysql_setup_db` will create a database, an associated user and a ramdom password.
-### The password will be stored as 'mysqlpwd' into the app settings,
-### and will be available as $db_pwd
-### If you're not using these lines:
-###		- Remove the section "BACKUP THE MYSQL DATABASE" in the backup script
-###		- Remove also the section "REMOVE THE MYSQL DATABASE" in the remove script
-###		- As well as the section "RESTORE THE MYSQL DATABASE" in the restore script
-
-db_name=$(ynh_sanitize_dbid $app)
-ynh_app_setting_set $app db_name $db_name
-ynh_mysql_setup_db $db_name $db_name
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
@@ -130,23 +115,64 @@ ynh_add_fpm7.2_config
 # SPECIFIC SETUP
 #=================================================
 
-# create a user
+# GET THE ADMIN EMAIL
 email=$(ynh_user_get_info $admin 'mail')
 
-# setup application config
-sudo  cp ../conf/.env $final_path/.env
+# COPY LOCAL.YAML
+sudo  cp ../conf/local.yaml $final_path/config/packages/local.yaml
+
+if [ "$registration" = "1" ]; then
+
+# MODIFY LOCAL.YAML
+	ynh_replace_string "__REGISTRATION__" "true" "$final_path/config/packages/local.yaml"
+
+elif [ "$registration" = "0" ]; then
+# MODIFY LOCAL.YAML
+	ynh_replace_string "__REGISTRATION__" "false" "$final_path/config/packages/local.yaml"
+fi
+
+# CHECK WHICH DATABASE TO USE
+if [ "$database" == "mysql" ]; then
+	# setup application config
+	sudo  cp ../conf/.env $final_path/.env
+#=================================================
+# CREATE A MYSQL DATABASE
+#=================================================
+
+### Use these lines if you need a database for the application.
+### `ynh_mysql_setup_db` will create a database, an associated user and a ramdom password.
+### The password will be stored as 'mysqlpwd' into the app settings,
+### and will be available as $db_pwd
+### If you're not using these lines:
+###		- Remove the section "BACKUP THE MYSQL DATABASE" in the backup script
+###		- Remove also the section "REMOVE THE MYSQL DATABASE" in the remove script
+###		- As well as the section "RESTORE THE MYSQL DATABASE" in the restore script
+
+db_name=$(ynh_sanitize_dbid $app)
+ynh_app_setting_set $app db_name $db_name
+ynh_mysql_setup_db $db_name $db_name
 
 #=================================================
 # MODIFY A CONFIG FILE
 #=================================================
-ynh_replace_string "__RANDOM_KEY__"  "$random_key" "$final_path/.env"
-ynh_replace_string "__DOMAIN__"      "$domain"     "$final_path/.env"
-ynh_replace_string "__DB_PASSWORD__" "$db_pwd"     "$final_path/.env"
-ynh_replace_string "__DB_USER__"     "$db_name"    "$final_path/.env"
-ynh_replace_string "__DB_NAME__"     "$db_name"    "$final_path/.env"
+	ynh_replace_string "__RANDOM_KEY__"  "$random_key" "$final_path/.env"
+	ynh_replace_string "__DOMAIN__"      "$domain"     "$final_path/.env"
+	ynh_replace_string "__DB_PASSWORD__" "$db_pwd"     "$final_path/.env"
+	ynh_replace_string "__DB_USER__"     "$db_name"    "$final_path/.env"
+	ynh_replace_string "__DB_NAME__"     "$db_name"    "$final_path/.env"
+else
+	# setup application config
+	sudo  cp ../conf/.env.sqlite $final_path/.env
 
+#=================================================
+# MODIFY A CONFIG FILE
+#=================================================
+	ynh_replace_string "__RANDOM_KEY__"  "$random_key" "$final_path/.env"
+	ynh_replace_string "__DOMAIN__"      "$domain"     "$final_path/.env"
 
+fi
 
+# COMPOSR AND SPECIFIC INSTALL FOR THE APP
 init_composer $final_path
 cd $final_path && sudo /usr/bin/php7.2 bin/console doctrine:schema:create
 cd $final_path && sudo /usr/bin/php7.2 bin/console cache:warmup --env=prod
@@ -200,9 +226,12 @@ fi
 #=================================================
 
 message=" $app was successfully installed :)
+
 Please open https://$domain$path_url
+
 The admin username is: $email
 Here is the admin password: $admin_pass
-If you facing an issue or want to improve this app, please open a new issue in this project: https://github.com/YunoHost-Apps/kimai2_ynh"
+
+If you facing any issue or want to improve the app, please open a new issue on the project page: https://github.com/YunoHost-Apps/kimai2_ynh"
 
 ynh_send_readme_to_admin "$message"
