--- a/scripts/install
+++ b/scripts/install
@@ -7,234 +7,208 @@
 #=================================================
 
 source _common.sh
+source ynh_add_extra_apt_repos__3
+source ynh_install_php__3
+source ynh_send_readme_to_admin__2
 source /usr/share/yunohost/helpers
 
 #=================================================
 # MANAGE SCRIPT FAILURE
 #=================================================
+ynh_print_info --message="Managing script failure..."
 
+ynh_clean_setup () {
+	read -p "key"
+	true
+}
 # Exit if an error occurs during the execution of the script
 ynh_abort_if_errors
 
 #=================================================
 # RETRIEVE ARGUMENTS FROM THE MANIFEST
 #=================================================
+ynh_print_info --message="Retrieving arguments from the manifest..."
 
 domain=$YNH_APP_ARG_DOMAIN
 path_url="/"
 admin=$YNH_APP_ARG_ADMIN
 is_public=$YNH_APP_ARG_IS_PUBLIC
-admin_pass=$(ynh_string_random 24)
-random_key=$(ynh_string_random 32)
 registration=$YNH_APP_ARG_REGISTRATION
 database=$YNH_APP_ARG_DATABASE
+admin_pass=$(ynh_string_random 24)
+random_key=$(ynh_string_random 32)
+admin_email=$(ynh_user_get_info $admin 'mail')
 
-# This is a multi-instance app, meaning it can be installed several times independently
-# The id of the app as stated in the manifest is available as $YNH_APP_ID
-# The instance number is available as $YNH_APP_INSTANCE_NUMBER (equals "1", "2", ...)
-# The app instance name is available as $YNH_APP_INSTANCE_NAME
-#    - the first time the app is installed, YNH_APP_INSTANCE_NAME = ynhexample
-#    - the second time the app is installed, YNH_APP_INSTANCE_NAME = ynhexample__2
-#    - ynhexample__{N} for the subsequent installations, with N=3,4, ...
-# The app instance name is probably what you are interested the most, since this is
-# guaranteed to be unique. This is a good unique identifier to define installation path,
-# db names, ...
 app=$YNH_APP_INSTANCE_NAME
 
 #=================================================
 # CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
 #=================================================
+ynh_print_info --message="Validating installation parameters..."
 
 final_path=/var/www/$app
-test ! -e "$final_path" || ynh_die "This path already contains a folder"
+test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
 
-# Normalize the url path syntax
-path_url=$(ynh_normalize_url_path $path_url)
-
-# Check web path availability
-ynh_webpath_available $domain $path_url
 # Register (book) web path
-ynh_webpath_register $app $domain $path_url
+ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
 
 #=================================================
 # STORE SETTINGS FROM MANIFEST
 #=================================================
+ynh_print_info --message="Storing installation settings..."
 
-ynh_app_setting_set $app domain $domain
-ynh_app_setting_set $app path $path_url
-ynh_app_setting_set $app admin $admin
-ynh_app_setting_set $app is_public $is_public
-ynh_app_setting_set $app random_key $random_key
-ynh_app_setting_set $app registration $registration
-ynh_app_setting_set $app database $database
-
+ynh_app_setting_set --app=$app --key=domain --value=$domain
+ynh_app_setting_set --app=$app --key=path --value=$path_url
+ynh_app_setting_set --app=$app --key=admin --value=$admin
+ynh_app_setting_set --app=$app --key=is_public --value=$is_public
+ynh_app_setting_set --app=$app --key=random_key --value=$random_key
+ynh_app_setting_set --app=$app --key=registration --value=$registration
+ynh_app_setting_set --app=$app --key=database --value=$database
 
 #=================================================
 # STANDARD MODIFICATIONS
 #=================================================
-# INSTALL DEPENDENCIES
+# INSTALL PHP7.3
 #=================================================
 
-ynh_install_php7
+if [ "$(lsb_release --codename --short)" = "buster" ]; then
+	pkg_dependencies="$pkg_dependencies $extra_pkg_dependencies"
+else
+	ynh_print_info --message="Installing PHP7.3..."
+	ynh_install_php --phpversion="7.3" --package="$extra_pkg_dependencies"
+fi
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
+ynh_print_info --message="Setting up source files..."
 
-ynh_app_setting_set $app final_path $final_path
+ynh_app_setting_set --app=$app --key=final_path --value=$final_path
 # Download, check integrity, uncompress and patch the source from app.src
-ynh_setup_source "$final_path"
+ynh_setup_source --dest_dir="$final_path"
 
 #=================================================
 # NGINX CONFIGURATION
 #=================================================
+ynh_print_info --message="Configuring nginx web server..."
 
 # Create a dedicated nginx config
 ynh_add_nginx_config
-if [ "$path_url" != "/" ]
-then
-	ynh_replace_string "^#sub_path_only" "" "/etc/nginx/conf.d/$domain.d/$app.conf"
-fi
-ynh_store_file_checksum "/etc/nginx/conf.d/$domain.d/$app.conf"
 
 #=================================================
 # CREATE DEDICATED USER
 #=================================================
+ynh_print_info --message="Configuring system user..."
 
 # Create a system user
-ynh_system_user_create $app
-
-#=================================================
-# PHP-FPM 7.2 CONFIGURATION
-#=================================================
-
-# Create a dedicated php-fpm7.2 config
-ynh_add_fpm7.2_config
+ynh_system_user_create --username=$app
 
 #=================================================
 # SPECIFIC SETUP
 #=================================================
+# CONFIGURE KIMAI 2
+#=================================================
+ynh_print_info --message="Configuring Kimai 2..."
 
-# GET THE ADMIN EMAIL
-email=$(ynh_user_get_info $admin 'mail')
-
-# COPY LOCAL.YAML
-sudo  cp ../conf/local.yaml $final_path/config/packages/local.yaml
-
+# Configure registration
+sudo cp ../conf/local.yaml $final_path/config/packages/local.yaml
 if [ $registration -eq 1  ]
 then
-
-# MODIFY LOCAL.YAML
 	ynh_replace_string "__REGISTRATION__" "true" "$final_path/config/packages/local.yaml"
-fi
-
-if [ $registration -eq 0 ]
-then
-# MODIFY LOCAL.YAML
+else
 	ynh_replace_string "__REGISTRATION__" "false" "$final_path/config/packages/local.yaml"
 fi
 
-# CHECK WHICH DATABASE TO USE
+env_conf=$final_path/.env
+# Configure environement
 if [ "$database" = "mysql" ]; then
 	# setup application config
-	sudo  cp ../conf/.env $final_path/.env
-#=================================================
-# CREATE A MYSQL DATABASE
-#=================================================
-
-### Use these lines if you need a database for the application.
-### `ynh_mysql_setup_db` will create a database, an associated user and a ramdom password.
-### The password will be stored as 'mysqlpwd' into the app settings,
-### and will be available as $db_pwd
-### If you're not using these lines:
-###		- Remove the section "BACKUP THE MYSQL DATABASE" in the backup script
-###		- Remove also the section "REMOVE THE MYSQL DATABASE" in the remove script
-###		- As well as the section "RESTORE THE MYSQL DATABASE" in the restore script
-
-db_name=$(ynh_sanitize_dbid $app)
-ynh_app_setting_set $app db_name $db_name
-ynh_mysql_setup_db $db_name $db_name
-
-#=================================================
-# MODIFY A CONFIG FILE
-#=================================================
-	ynh_replace_string "__RANDOM_KEY__"  "$random_key" "$final_path/.env"
-	ynh_replace_string "__DOMAIN__"      "$domain"     "$final_path/.env"
-	ynh_replace_string "__DB_PASSWORD__" "$db_pwd"     "$final_path/.env"
-	ynh_replace_string "__DB_USER__"     "$db_name"    "$final_path/.env"
-	ynh_replace_string "__DB_NAME__"     "$db_name"    "$final_path/.env"
+	sudo  cp ../conf/.env.mysql $env_conf
+	db_name=$(ynh_sanitize_dbid $app)
+	ynh_app_setting_set $app db_name $db_name
+	ynh_mysql_setup_db $db_name $db_name
+	
+	ynh_replace_string "__RANDOM_KEY__"  "$random_key" "$env_conf"
+	ynh_replace_string "__DOMAIN__"      "$domain"     "$env_conf"
+	ynh_replace_string "__DB_PASSWORD__" "$db_pwd"     "$env_conf"
+	ynh_replace_string "__DB_USER__"     "$db_name"    "$env_conf"
+	ynh_replace_string "__DB_NAME__"     "$db_name"    "$env_conf"
 else
 	# setup application config
-	sudo  cp ../conf/.env.sqlite $final_path/.env
-
-#=================================================
-# MODIFY A CONFIG FILE
-#=================================================
-	ynh_replace_string "__RANDOM_KEY__"  "$random_key" "$final_path/.env"
-	ynh_replace_string "__DOMAIN__"      "$domain"     "$final_path/.env"
-
+	sudo  cp ../conf/.env.sqlite $env_conf
+	ynh_replace_string "__RANDOM_KEY__"  "$random_key" "$env_conf"
+	ynh_replace_string "__DOMAIN__"      "$domain"     "$env_conf"
 fi
 
-# COMPOSR AND SPECIFIC INSTALL FOR THE APP
-init_composer $final_path
-cd $final_path && sudo /usr/bin/php7.2 bin/console doctrine:schema:create
-cd $final_path && sudo /usr/bin/php7.2 bin/console cache:warmup --env=prod
-cd $final_path && sudo /usr/bin/php7.2 bin/console kimai:create-user "$admin" "$email" ROLE_SUPER_ADMIN "$admin_pass"
-cd $final_path && sudo /usr/bin/php7.2 bin/console doctrine:migrations:version --add --all -n
-
-
 #=================================================
-# SETUP APPLICATION 
+# BUILD KIMAI 2
 #=================================================
+ynh_print_info --message="Building Kimai 2..."
 
-# Set right permissions 
-chown -R $app: $final_path
+pushd "$final_path"
+	php7.3 bin/console kimai:install -n
+popd
 
 #=================================================
-# STORE THE CHECKSUM OF THE CONFIG FILE
+# STORE THE CONFIG FILE CHECKSUM
 #=================================================
+ynh_print_info --message="Storing the config file checksum..."
 
 # Calculate and store the config file checksum into the app settings
-ynh_store_file_checksum "$final_path/.env"
+ynh_store_file_checksum --file="$env_conf"
+
+#=================================================
+# GENERIC FINALIZATION
+#=================================================
+# PHP-FPM CONFIGURATION
+#=================================================
+ynh_print_info --message="Configuring php-fpm..."
+
+# Create a dedicated php-fpm config
+ynh_add_fpm_config --phpversion="7.3"
+
+#=================================================
+# SECURE FILES AND DIRECTORIES
+#=================================================
+ynh_print_info --message="Securing files and directories..."
+
+# Set permissions to app files
+chown -R $app: $final_path
 
 #=================================================
 # SETUP SSOWAT
 #=================================================
+ynh_print_info --message="Configuring SSOwat..."
 
-if [ $is_public -eq 0 ]
-then	# Remove the public access
-	ynh_app_setting_delete $app skipped_uris
-fi
 # Make app public if necessary
 if [ $is_public -eq 1 ]
 then
 	# unprotected_uris allows SSO credentials to be passed anyway.
-	ynh_app_setting_set $app unprotected_uris "/"
+	ynh_app_setting_set --app=$app --key=unprotected_uris --value="/"
 fi
 
 #=================================================
 # RELOAD NGINX
 #=================================================
-systemctl reload php7.2-fpm
-systemctl reload nginx
-# Set default php to php5 or php7.0
-if [ "$(lsb_release --codename --short)" = "jessie" ]; then
-	update-alternatives --set php /usr/bin/php5
-else
-    update-alternatives --set php /usr/bin/php7.0
-fi
+ynh_print_info --message="Reloading nginx web server..."
+
+ynh_systemd_action --service_name=nginx --action=reload
 
 #=================================================
 # SEND A README FOR THE ADMIN
 #=================================================
+ynh_print_info --message="Sending a readme for the admin..."
 
-message=" $app was successfully installed :)
+ynh_replace_string --match_string="__APP__"    --replace_string="$app"    --target_file="../conf/message"
+ynh_replace_string --match_string="__DOMAIN__"    --replace_string="$domain"    --target_file="../conf/message"
+ynh_replace_string --match_string="__PATH_URL__"    --replace_string="$path_url"    --target_file="../conf/message"
+ynh_replace_string --match_string="__ADMIN_EMAIL__"    --replace_string="$admin_email"    --target_file="../conf/message"
+ynh_replace_string --match_string="__ADMIN_PASS__"    --replace_string="$admin_pass"    --target_file="../conf/message"
 
-Please open https://$domain$path_url
+ynh_send_readme_to_admin --app_message="../conf/message" --recipients=$admin_email --type='install'
 
-The admin username is: $email
-Here is the admin password: $admin_pass
+#=================================================
+# END OF SCRIPT
+#=================================================
 
-If you facing any issue or want to improve the app, please open a new issue on the project page: https://github.com/YunoHost-Apps/kimai2_ynh"
-
-ynh_send_readme_to_admin "$message"
+ynh_print_info --message="Installation of $app completed"
