--- a/scripts/install
+++ b/scripts/install
@@ -118,7 +118,7 @@ ynh_print_info --message="Configuring Kimai2..."
 local_conf="$final_path/config/packages/local.yaml"
 # Configure registration
 sudo cp ../conf/local.yaml $local_conf
-ynh_replace_string  --match_string="__APP__" "$app" --target_file="$local_conf"
+ynh_replace_string  --match_string="__APP__" --replace_string="$app" --target_file="$local_conf"
 if [ $registration -eq 1  ]
 then
 	ynh_replace_string  --match_string="__REGISTRATION__" --replace_string="true" --target_file="$local_conf"
