--- a/scripts/install
+++ b/scripts/install
@@ -14,9 +14,6 @@ source /usr/share/yunohost/helpers
 # MANAGE SCRIPT FAILURE
 #=================================================
 
-ynh_clean_setup () {
-	true
-}
 # Exit if an error occurs during the execution of the script
 ynh_abort_if_errors
 
@@ -52,19 +49,17 @@ ynh_script_progression --message="Storing installation settings..."
 ynh_app_setting_set --app=$app --key=domain       --value=$domain
 ynh_app_setting_set --app=$app --key=path         --value=$path_url
 ynh_app_setting_set --app=$app --key=admin        --value=$admin
-ynh_app_setting_set --app=$app --key=is_public    --value=$is_public
 ynh_app_setting_set --app=$app --key=registration --value=$registration
 ynh_app_setting_set --app=$app --key=random_key   --value=$random_key
 ynh_app_setting_set --app=$app --key=update       --value=$update
 
 #=================================================
-# STANDARD MODIFICATIONS
+# CREATE DEDICATED USER
 #=================================================
-# INSTALL DEPENDENCIES
-#=================================================
-ynh_script_progression --message="Installing dependencies..."
+ynh_script_progression --message="Configuring system user..."
 
-ynh_install_app_dependencies $pkg_dependencies
+# Create a system user
+ynh_system_user_create --username=$app --home_dir="$final_path"
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
@@ -74,24 +69,19 @@ ynh_script_progression --message="Setting up source files..."
 ynh_app_setting_set --app=$app --key=final_path --value=$final_path
 
 # Clone the latest version
+git clone -b $tag --depth 1 https://github.com/kevinpapst/kimai2.git $final_path --quiet
 
-git clone -b $tag --depth 1 https://github.com/kevinpapst/kimai2.git $final_path
+chmod 750 "$final_path"
+chmod -R o-rwx "$final_path"
+chown -R $app:www-data "$final_path"
 
 #=================================================
 # NGINX CONFIGURATION
 #=================================================
-ynh_script_progression --message="Configuring nginx web server..."
+ynh_script_progression --message="Configuring NGINX web server..."
 
 # Create a dedicated nginx config
 ynh_add_nginx_config
-
-#=================================================
-# CREATE DEDICATED USER
-#=================================================
-ynh_script_progression --message="Configuring system user..."
-
-# Create a system user
-ynh_system_user_create --username=$app
 
 #=================================================
 # PHP-FPM CONFIGURATION
@@ -130,9 +120,13 @@ ynh_app_setting_set --app=$app                       --key=db_name --value=$db_n
 ynh_mysql_setup_db  --db_user=$db_user               --db_name=$db_name	
 ynh_replace_string  --match_string="__RANDOM_KEY__"  --replace_string="$random_key" --target_file="$env_conf"
 ynh_replace_string  --match_string="__DOMAIN__"      --replace_string="$domain"     --target_file="$env_conf"
-ynh_replace_string  --match_string="__DB_PASSWORD__" --replace_string="$db_pwd"     --target_file="$env_conf"
+ynh_replace_string  --match_string="__DB_PWD__" --replace_string="$db_pwd"     --target_file="$env_conf"
 ynh_replace_string  --match_string="__DB_USER__"     --replace_string="$db_name"    --target_file="$env_conf"
 ynh_replace_string  --match_string="__DB_NAME__"     --replace_string="$db_name"    --target_file="$env_conf"
+
+
+#ynh_add_config --template="../conf/.env.mysql" --destination="$final_path/.env"
+
 
 #=================================================
 # BUILD KIMAI2
@@ -177,7 +171,6 @@ ynh_permission_create --permission="super_admin" --allowed "$admin"
 # Make app public if necessary
 if [ $is_public -eq 1 ]
 then
-	# unprotected_uris allows SSO credentials to be passed anyway.
 	ynh_permission_update --permission "main" --add "visitors"
 fi
 
